--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,21 @@
 services:
-  - type: web
+  - type: worker
     name: twitter-bot
     env: python
     plan: free
+
     buildCommand: |
       apt-get update
       apt-get install -y wget gnupg unzip
       wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
       apt-get install -y ./google-chrome-stable_current_amd64.deb
       pip install -r requirements.txt
+
     startCommand: python main.py
+
     envVars:
       - key: BOT_TOKEN
         sync: false
+
       - key: DEEPSEEK_API_KEY
         sync: false
